<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="5dp"
    android:weightSum="10">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Comapny Name"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_company_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Budget"
            android:textSize="22sp" />

    </LinearLayout>
    <ImageButton
        android:id="@+id/btn_company_accept"
        android:layout_width="69dp"
        android:layout_height="68dp"
        android:background="@android:color/transparent"
        android:gravity="end"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/accept"/>


</LinearLayout>